# nc_python_booking-service

./: .env  README.md  config.py  db_init.py  main.py  pyproject.toml
auth/: dependencies.py
auth/controller/: auth_controller.py
auth/model/: auth_model.py
auth/repository/: auth_repository.py
auth/schemas/: auth_schemas.py
auth/service/: auth_service.py
auth/utils/avatar_generator/: avatar_generator.py
booking/controller/: booking_controller.py
booking/model/: booking_model.py
booking/repository/: booking_repository.py
booking/schemas/: booking_schemas.py
booking/service/: booking_service.py
lib/const/: req_status.py
rooms/controller/: rooms_controller.py
rooms/model/: rooms_model.py
rooms/repository/: rooms_repository.py
rooms/schemas/: rooms_schemas.py
rooms/service/: rooms_service.py
