[project]
name = "Сервис для бронирования переговорных комнат"
version = "0.1.0"
description = "сервис позволяет бронировать переговорные комнаты по переданному промежутку"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.125.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
